Version 1.21 - 15 Jan 2013

* Environment variables LANGUAGE and LANG are interpreted in the same way
  in the XS and the pure Perl version.

* If present, File::ShareDir is used for searching message catalogs.

* Bugs fixed:
  https://rt.cpan.org/Ticket/Display.html?id=78341
  https://rt.cpan.org/Ticket/Display.html?id=81315
  https://rt.cpan.org/Ticket/Display.html?id=79461
  https://rt.cpan.org/Ticket/Display.html?id=71509
  https://rt.cpan.org/Ticket/Display.html?id=49744
  https://rt.cpan.org/Ticket/Display.html?id=49744
  https://rt.cpan.org/Ticket/Display.html?id=64284

Version 1.20 - 29 Jue 2009

* Test suite revamped.  Failures are now explained better, and it should
  be easier to debug them remotely.

* Bugs fixed:
  https://rt.cpan.org/Ticket/Display.html?id=49744

Version 1.19 - 19 Jun 2009

* New context functions now work with Perl 5.6.2.

* N__() now mirrors its argument in scalar context for convenience.

Version 1.18 - 26 May 2009

* Cosmetic change: The version number is now both in Locale::Messages
  and in Locale::TextDomain to work around a shortcoming of the
  PAUSE indexer.

Version 1.17 - 25 May 2009

* New context support, supporting .po files with msgctxt, and 
  appropriate supporting calls (*pgettext calls) under both
  gettext_pp and gettext_xs. TextDomain.pm received corresponding
  calls: __p __px __np __npx __xnp.

* New module Locale::Util with some utility functions, especially for
  web development.  Attention, this is still alpha code!

* Try to warn about wrong usage of the tied hashes in
  Locale::TextDomain.

* Minor bugfixes

Version 1.16 - 28 Sep 2005

* New function Locale::Messages::bind_textdomain_filter() allows you 
  to register an output filter as a callback.  You can use this
  feature for example to set the utf-8 flag on translated string when
  you are sure that the output is actually utf-8.

* New function Locale::Messages::turn_utf_8_on().

* various minor bug fixes.

Version 1.15 - 1 Sep 2005
